finalized the autosaver class